@@ -7,3 +7,4 @@
 - Temp directory of ChunkedHashStore (and classes that use it) should be settable.
 - Move values lists to disk when possible.
 - Jenkins hash should mix better last values. Or XOR with c.
+- Comment all classes!
